--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,9 +1,10 @@
 services:
   webapplication_zerado:
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_HTTP_PORTS=8080
-      - ASPNETCORE_HTTPS_PORTS=8081
+      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
+      - ASPNETCORE_HTTP_PORTS=${ASPNETCORE_HTTP_PORTS}
+      - ASPNETCORE_HTTPS_PORTS=${ASPNETCORE_HTTPS_PORTS}
+      - ASPNETCORE_URLS=${ASPNETCORE_URLS}  
     ports:
       - "8080"
       - "8081"
